# hpp-practicals

./: .gitlab-ci.yml  CMakeLists.txt  NEWS  README.md  package.xml
instructions/: Makefile  corba.asciidoc  corba.html  exercise-1.asciidoc  exercise-1.html  exercise-2.asciidoc  exercise-2.html  preliminaries.tex
meshes/ur_benchmark/: pokeball.osg
script/: .rrt.py.swp  grasp_ball.py  grasp_ball_in_box.py  manipulation.py  manipulation_box.py  motion_planner.py  rrt.py  solve_by_hand.py
script/manipulation/: __init__.py  common.py
slides/: be.tex  class-1.aux  class-1.nav  class-1.tex  class-2.aux  class-2.nav  class-2.out  class-2.tex  class-2.toc  class-2.vrb  definitions.tex  introduction.tex  manipulation.tex  non-linear-constraints.tex  random-methods.tex  script  static-collision-checking.tex
slides/figures/: composite-robot.pdf_tex  connecting-trees-simple-grasp.pdf_tex  connecting-trees.pdf_tex  foliation-example.pdf_tex  foliation-path.pdf_tex  forward-kinematics.pdf_tex  kinematic-chain.pdf_tex  progressive_0.eps  progressive_1.eps  progressive_2.eps  progressive_3.eps  progressive_4.eps  relative-pose.pdf_tex  second_order_polynomial2.eps
src/hpp/corbaserver/practicals/manipulation/ur5/: robot.py
src/hpp/corbaserver/practicals/ur5/: robot.py
srdf/ur_benchmark/: ground.srdf  pokeball.srdf
update/: save.sh  update.sh
urdf/: ur5_gripper.urdf  ur5_joint_limited_robot.urdf
urdf/ur_benchmark/: ground_with_obstacles.urdf  pokeball.urdf
